# wordle_flet

./: README.md  pyproject.toml  what-to-learn-next.md  what-we-learned.md
src/: const.py  game.py  keyboard.py  main.py  menu.py  settings.py  stats.py  words.py
src/assets/: kontext-freq_download-2026-03-14.txt
